--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.show-sql=true
-sprinc.jpa.format-sql=true
+#spring.jpa.show-sql=true
+#sprinc.jpa.format-sql=true
